# Course_Advising_Agent

./: README.md  REFLECTION.md  pyproject.toml
docs/plans/: mcgill-course-advisor-plan.md
docs/specs/: mcgill-course-advisor-design.md
evals/: cases.py  run_evals.py  test_evals.py  test_policy.py
evidence/: run-432be2df.json  run-67bcab6b.json  run-be2bc02e.json  run-d528ecde.json  run-f6d2efe5.json
src/advisor/: __init__.py  agent.py  context.py  fixtures.py  guardrails.py  policy.py  run.py  run_logger.py  schemas.py  tools.py
